@@ -189,6 +189,9 @@
       <name>Chris Eldredge</name>
     </contributor>
     <contributor>
+      <name>Magnus Grimsell</name>
+    </contributor>
+    <contributor>
       <name>Jim Harrington</name>
     </contributor>
     <contributor>
@@ -212,6 +215,9 @@
     </contributor>
     <contributor>
       <name>Masato Tezuka</name>
+    </contributor>
+    <contributor>
+      <name>James Urie</name>
     </contributor>
     <contributor>
       <name>Frank W. Zammetti</name>
